# memoryManagement

./: CMakeLists.txt  LICENSE  README.md
src/: answergraph.txt  chatbot.cpp  chatbot.h  chatgui.cpp  chatgui.h  chatlogic.cpp  chatlogic.h  graphedge.cpp  graphedge.h  graphnode.cpp  graphnode.h
